# src/app.ts
@@ -20,6 +20,7 @@ import despesasFixasRouter from './routes/despesasFixas';
 import receitasFixasRouter from './routes/receitasFixas';
 import saldoProjetadoRouter from './routes/saldoProjetado';
 import dashboardRouter from './routes/dashboard';
+import relatoriosRouter from './routes/relatorios';
 import fechamentoMensalRouter from './routes/fechamentoMensal';
 import convitesRouter from './routes/convites';
 import authRouter from './routes/auth';
@@ -52,6 +53,7 @@ app.use('/despesas-fixas', despesasFixasRouter);
 app.use('/receitas-fixas', receitasFixasRouter);
 app.use('/saldo-projetado', saldoProjetadoRouter);
 app.use('/dashboard', dashboardRouter);
+app.use('/relatorios', relatoriosRouter);
 app.use('/fechamento-mensal', fechamentoMensalRouter);
 app.use('/convites', convitesRouter);
 app.use('/auth', authRouter);
